<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Well New Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Log In</string>
    <string name="below_login_button">Don\'t have an account? Sign Up</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="signup">Register</string>
    <string name="below_register_button">Already a WellNewMe member? Log in</string>
    <string name="rpassword">Re-type Password</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="percent">0%</string>

    <integer-array name="done">
        <item>@drawable/done_icon</item>
        <item>@drawable/done_icon</item>
        <item>@drawable/done_icon</item>
        <item>@drawable/done_icon</item>
        <item>@drawable/done_icon</item>
    </integer-array>

    <string-array name="options">
        <item>Your Age and Gender</item>
        <item>Your Diet and Exercise Habits</item>
        <item>Your Tobacco, Alcohol and Drugs History</item>
        <item>Your Family History</item>
        <item>Your Medical History</item>
    </string-array>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="diet">
        <item>Traditional Nigerian Diet: Rice, Garri, Yam, Vegetables, Fruits</item>
        <item>Western Diet: Meat and Potatoes</item>
        <item>Mixed diet: I eat what I like</item>
        <item>Vegetarian: no meat or fish</item>
        <item>Lacto-Ovo Vegetarian: diet includes dairy products but no meat or fish</item>
        <item>Vegan: plant products only</item>
    </string-array>
    <string-array name="smoke">
        <item>Never smoked</item>
        <item>Used to smoke</item>
        <item>Still smoke</item>
    </string-array>
    <string-array name="forms">
        <item>None</item>
        <item>Pipe</item>
        <item>Snuff</item>
        <item>Cigar</item>
        <item>Chew</item>
    </string-array>

    <string name="title_activity_age_gender">AgeGenderActivity</string>
    <string name="dateofbirth">Your Date of Birth</string>
    <string name="setDate">SET DATE</string>
    <string name="yourgender">Your Gender</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_diet_and_exercise">DietAndExerciseActivity</string>
    <string name="title1"><b>Age and Gender Details</b></string>
    <string name="title2"><b>Diet and Exercise History</b></string>
    <string name="preview">Preview</string>
    <string name="question1_diet">Do you exercise up to an 1 hour or more at least three times a week on a regular basis?</string>
    <string name="question2_diet">Do you carry out any strength training activities at least three times a week?</string>
    <string name="question3_diet">Which one of these will best describe your diet?</string>
    <string name="question4_diet">Do you eat fast foods more than once a month?</string>
    <string name="title_activity_preview_diet">PreviewDietActivity</string>
    <string name="submit">Submit</string>
    <string name="answer1_diet">Exercise on a Regular Basis:</string>
    <string name="answer">false</string>
    <string name="answer2_diet">Carry Out Strength Training Activities:</string>
    <string name="answer3_diet">Diet Habit:</string>
    <string name="answer4_diet">Eat Fast Foods More than once a Month?</string>
    <string name="title_activity_tobacco_drugs">TobaccoDrugsActivity</string>
    <string name="title3"><b>Tobacco, Alcohol and Drugs History</b></string>
    <string name="question1_drug">How would you describe your smoking habit?</string>
    <string name="question2_drug">Do you consume tobacco in any of these forms?</string>
    <string name="question3_drug">On average how many bottles of beer or glasses of wine do you consume in a day?</string>
    <string name="question4_drug">Has anyone raised concern about the amount of alcohol you consume?</string>
    <string name="question5_drug">Do you take recreational drugs e.g. weed, ecstasy?</string>
    <string name="title_activity_preview_drug">PreviewDrugActivity</string>
    <string name="answer1_drug">Smoking Habit:</string>
    <string name="answer2_drug">Other forms of tobacco taken:</string>
    <string name="answer3_drug">Average number of bottles of beer / glasses of wine consumed in a day:</string>
    <string name="answer4_drug">Has anyone raised concern about the amount of alcohol you consume?</string>
    <string name="answer5_drug">Do you take recreational drugs e.g. weed, ecstasy?</string>
    <string name="title_activity_family_history">FamilyHistoryActivity</string>
    <string name="title4"><b>Your Family History</b></string>
    <string name="question1_family">Is there anyone in your immediate family (parents or siblings) that has been diagnosed with diabetes?</string>
    <string name="question2_family">Is there anyone in your immediate family that has been diagnosed with high blood pressure?</string>
    <string name="question3_family">Is there anyone in your immediate family that has been diagnosed with heart disease?</string>
    <string name="title_activity_preview_family">PreviewFamilyActivity</string>
    <string name="answer1_family">Family History of Diabetes:</string>
    <string name="answer2_family">Family History of Hypertension:</string>
    <string name="answer3_family">Family History of Heart Disease:</string>
    <string name="title_activity_medical_history">MedicalHistoryActivity</string>
    <string name="title5"><b>Your Medical History</b></string>
    <string name="question1_medical">Have you ever been diagnosed with high blood pressure?</string>
    <string name="question2_medical">Have you ever been diagnosed with high blood sugar?</string>
    <string name="question3_medical">Have you ever been diagnosed with high blood cholesterol?</string>
    <string name="question4_medical">Are you currently taking any steriods medication?</string>
    <string name="title_activity_preview_medical">PreviewMedicalActivity</string>
    <string name="answer1_medical">Ever been diagnosed with high blood pressure?:</string>
    <string name="answer2_medical">Ever been diagnosed with high blood sugar?:</string>
    <string name="answer3_medical">Ever been diagnosed with high blood cholesterol?:</string>
    <string name="answer4_medical">Currently on steriod medication?:</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

</resources>
