<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/twenty_dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textColor="@color/black"
            android:textSize="@dimen/twentyfive_sp"
            android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dob"
        android:text="@string/dateofbirth"
        android:textSize="@dimen/twenty_sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"/>

        <Button
            android:id="@+id/setDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/setDate"
            android:background="@color/black"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ygender"
            android:text="@string/yourgender"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/select_gender"
            android:layout_width="@dimen/one_twenty_dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:entries="@array/gender_array"
            android:prompt="@string/yourgender"
            android:spinnerMode="dialog"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/twenty_dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:textColor="@color/white"/>

        </LinearLayout>

</LinearLayout>

