<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fivedp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title5"
            android:textColor="@color/black"
            android:textSize="@dimen/twentyfive_sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question1"
            android:text="@string/answer1_medical"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/answer1_medical"
            android:text="@string/answer"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question1"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question2"
            android:text="@string/answer2_medical"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"/>

        <TextView
            android:id="@+id/answer2_medical"
            android:text="@string/answer"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"
            android:layout_below="@+id/question2"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question3"
            android:text="@string/answer3_medical"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"/>

        <TextView
            android:id="@+id/answer3_medical"
            android:text="@string/answer"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"
            android:layout_below="@+id/question3"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question4"
            android:text="@string/answer4_medical"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"/>

        <TextView
            android:id="@+id/answer4_medical"
            android:text="@string/answer"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"
            android:layout_below="@+id/question4"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/grey"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/twenty_dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>

