<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/fivedp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twentyfive_sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question1_medical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:text="@string/question1_medical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twenty_sp" />

                <Spinner
                    android:id="@+id/spinner1_medical"
                    android:layout_width="@dimen/one_twenty_dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/question1_medical"
                    android:entries="@array/yes_no"
                    android:prompt="@string/title5"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question2_medical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:text="@string/question2_medical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twenty_sp" />

                <Spinner
                    android:id="@+id/spinner2_medical"
                    android:layout_width="@dimen/one_twenty_dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/question2_medical"
                    android:entries="@array/yes_no"
                    android:prompt="@string/title5"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question3_medical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:text="@string/question3_medical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twenty_sp" />

                <Spinner
                    android:id="@+id/spinner3_medical"
                    android:layout_width="@dimen/two_forty_dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/question3_medical"
                    android:entries="@array/yes_no"
                    android:prompt="@string/title2"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question4_medical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:text="@string/question4_medical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twenty_sp" />

                <Spinner
                    android:id="@+id/spinner4_medical"
                    android:layout_width="@dimen/one_twenty_dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/question4_medical"
                    android:entries="@array/yes_no"
                    android:prompt="@string/title5"
                    android:spinnerMode="dialog" />
            </RelativeLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:background="@color/black"
                    android:text="@string/preview"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>

